[tool.poetry]
name = "nandiasgarden"
version = "0.1.0"
description = "Based on this course from LinkedIn Learning: `Django: Forms`"
authors = ["Javier Estraviz <javier.estraviz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
